.metals/.reports/metals/2023-09-05/r_scala-toplevel-mtags_13-46-34-626
id: file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/CUtester.scala:[160..167) in Input.VirtualFile("file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/CUtester.scala", "package single_cycle

import chisel3._
 import chisel3.tester._
 import org.scalatest.FreeSpec
 import chisel3.experimental.BundleLiterals._

 
 class  extends FreeSpec with ChiselScalatestTester{
    "im tester file"in{
        test(new class controlunit extends Module {
) { a => 
        }
    }
}

")
file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/CUtester.scala:9: error: expected identifier; obtained extends
 class  extends FreeSpec with ChiselScalatestTester{
        ^